# i-SAS_project-template

./: .gitignore  LICENSE  README.md
development/: .env.example  Dockerfile  README.md  compose.yml  pyproject.toml
development/cfg/: service.yml
development/notebooks/: project-template.ipynb
system/: README.md
system/db/: compose.yml
system/db/postgres/init/: init.sh
system/project_base/: .env.example  Dockerfile  compose.yml  pyproject.toml
system/project_base/cfg/: project.yml
system/project_base/src/: content_layout.py
