[tool.poetry]
name = "project_development"
version = "1.0.0"
description = "An implementation of `development` project of {template} for i-SAS."
authors = ["Makito Kobayashi"]
repository = "https://github.com/i-SAS/i-SAS_project-{template}"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
isas = { git = "ssh://git@github.com/i-SAS/i-SAS_Interface_MIT", branch = "master" }
isas_subpackage_template = { git = "ssh://git@github.com/i-SAS/i-SAS_Subpackage-template_MIT", branch = "master" }

[tool.poetry.dev-dependencies]
flake8 = "6.1.0"
flake8-isort = "*"
flake8-quotes = "*"
ipython = "*"
jupyter = "*"
pep8-naming = "*"
pyproject-flake8 = "*"

[tool.isort]
multi_line_output = 5

[tool.flake8]
max-line-length = 120
exclude = [
    "*/__init__.py",
    ]

[build-system]
requires = ["poetry_core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
